--- a/frontend/statics/signup.html
+++ b/frontend/statics/signup.html
@@ -9,8 +9,8 @@
 
 <body>
     <div class="container">
-        <h2>Login</h2>
-        <form action="/login" method="post">
+        <h2>Sign Up</h2>
+        <form action="/signup" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
@@ -21,9 +21,9 @@
 
             <div style="margin-top: 10px;"></div>
 
-            <input type="submit" value="Login">
+            <input type="submit" value="Sign Up">
         </form>
-        <p><a href="/signup">Create a new account</a></p>
+        <p>Already have an account? <a href="/">Log in</a></p>
     </div>
 </body>
 
