Basic frontend storage

--- a/frontend/statics/file.html
+++ b/frontend/statics/file.html
@@ -8,7 +8,6 @@
 <body>
     <div class="file-container">
         <!-- Insert file name here using c++ code-->
-        <h2>File name</h2>
         <button id="delete-btn">Delete</button>
         <button id="download-btn">Download</button>
     </div>
@@ -45,7 +44,7 @@
         });
 
         document.getElementById('download-btn').addEventListener('click', function() {
-            // TODO: Implement reply
+            // TODO: Implement download
             alert('Downloading file...');
         });
     </script>
