user sign in working

--- a/frontend/statics/storage.html
+++ b/frontend/statics/storage.html
@@ -9,7 +9,7 @@
 
 <body>
     <!--add conditional to change "Inbox" to whatever directory we are currently in-->
-    <h1>Inbox</h1>
+    <h1>Storage</h1>
     <a href="/home">Back to Home</a>
     <br><br>
     <!-- form to upload a new file -->
