--- a/frontend/statics/storage.html
+++ b/frontend/statics/storage.html
@@ -14,7 +14,7 @@
     <br><br>
     <!-- form to upload a new file -->
     <h3>Upload</h3>
-    <form action="/upload" method="post">
+    <form action="/upload" method="post" enctype="multipart/form-data">
         <label for="file">File: </label>
         <input type="file" id="file" name="filename" required>
         <br><br>
