--- a/frontend/statics/file.html
+++ b/frontend/statics/file.html
@@ -44,6 +44,21 @@
         });
 
         document.getElementById('download-btn').addEventListener('click', function() {
+          const currentURL = document.URL;
+          const index = currentURL.search("file");
+          let filePath = currentURL.substring(index + 4);
+          fetch(`/download${filePath}`)
+            .then(response => {
+              if (!response.ok) {
+                throw new Error('Response was not ok');
+              }
+              return response; 
+            }).then(data => {
+              console.log('GET request successful', data);
+            })
+            .catch(error => {
+              console.error('There was a problem with the GET request:', error);
+            })
             // TODO: Implement download
             alert('Downloading file...');
         });
