Add changing password functionality

--- a/frontend/statics/changepass.html
+++ b/frontend/statics/changepass.html
@@ -9,8 +9,8 @@
 
 <body>
     <div class="container">
-        <h2>Login</h2>
-        <form action="/login" method="post">
+        <h2>Change Password</h2>
+        <form action="/changepassword" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
@@ -21,10 +21,8 @@
 
             <div style="margin-top: 10px;"></div>
 
-            <input type="submit" value="Login">
+            <input type="submit" value="Change Password">
         </form>
-        <p><a href="/signup">Create a new account</a></p>
-        <p><a href="/changepassword">Change password</a></p>
     </div>
 </body>
 
