--- a/frontend/statics/inbox.html
+++ b/frontend/statics/inbox.html
@@ -98,7 +98,7 @@
                     })
                         .then(response => {
                             if (!response.ok) {
-                                throw new Error('The recipent(s) do not have an account in penncloud.');
+                                throw new Error('Email failed to send.');
                             }
                             return response.text();
                         })
